# gno-realm-and-package-scrapper

./: .gitignore  README.md  pyproject.toml
gno-realm-and-package-scrapper/: __init__.py  r_extractor.py
gno_realm_and_package_scrapper/: r_extractor.py
