[tool.poetry]
name = "gno-realm-and-package-scrapper"
version = "0.1.0"
description = "Tools for extracting content from documents and websites"
authors = ["matijamarjanovic <matijamarjanovic69@gmail.com>"]
package-mode = true

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.3"
playwright = "^1.42.0"
argparse = "^1.4.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openai = "^1.12.0"

[tool.poetry.scripts]
extract_realms = "gno_realm_and_package_scrapper.r_extractor:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
